--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "devDependencies": {
     "grunt": "0.4.0",
     "grunt-contrib-coffee": "0.4.0",
-    "grunt-contrib-watch": "0.2.0",
+    "grunt-contrib-watch": "0.2.0"
   },
   "scripts": {
+    "start": "node server/gen/js/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
