--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "johnny-five": "~0.6.2",
     "express": "3.x",
-    "jade": "*"
+    "jade": "*",
+    "lodash": "1.2.1"
   },
   "devDependencies": {
     "grunt": "0.4.0",
